<resources>
    <string name="app_name">Kotlin</string>
    <string name="welcome_msg">WelCome To Kotlin Demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="castAndCrew">Cast and Crew</string>
</resources>
