<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.sanjum.kotlindemo.ListActivity">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyCler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_animation_list"
        android:padding="4dp" />

</LinearLayout>
