<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sanjum.kotlindemo.fragments.DetailsFragment">

    <TextView
        android:id="@+id/fr_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="INFO"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="12dp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/fr_image_button"
        android:layout_width="82dp"
        android:layout_height="72dp"
        android:layout_margin="16dp"
        android:text="Watch Trailer" />

</LinearLayout>
